--- a/README.org
+++ b/README.org
@@ -1,15 +1,14 @@
-#+title: MU Sofia student notes
+#+title: MU Sofia Student Library
 #+Authors: Thanos Apollo
-*** About
-+ *By students, for students*
-+ Feel free to contribute
+** About
++ Repository dedicated for study resources related to MU-Sofia medical courses
 
 *** How to contribute
 + Contributing can be done directly by the [[https://github.com/ThanosApollo/MedNotes/tree/developer][GitHub page]]
   + Tutorial [[https://www.youtube.com/watch?v=waEb2c9NDL8][here]]
   + Org mode syntax cheatsheet [[https://devhints.io/org-mode][here]]
 
-*** Table of contents
+** Table of contents
 
 + *Year 3*
   + [[file:Microbiology/Microbiology.org][Microbiology]]
